experimental support for pointers, performance tuned, debugged and improved diffusion 3d example

--- a/examples/diffusion3d/config/Makefile
+++ b/examples/diffusion3d/config/Makefile
@@ -29,6 +29,6 @@ include ${TOOLSDIR}MakefileForCompilationCommon
 
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
-# diffusion3d.o : ../source/storage.h
-diffusion3d.o : storage_order.F90
+diffusion3d.o : storage_order.F90 ../source/storage.h ${USER_LIB}
+time_profiling.o : helper_functions.o
 
