--- a/hf_processor/MakefileForCompilationTemplate
+++ b/hf_processor/MakefileForCompilationTemplate
@@ -27,6 +27,8 @@ include ./MakesettingsGeneral
 include ./Makesettings
 include ${TOOLSDIR}MakefileForCompilationCommon
 
+time_profiling.o : helper_functions.o
+
 # ADD YOUR DEPENDENCIES BELOW THIS LINE
 # -------->
 
