--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -180,7 +180,15 @@ INSTALLED_EXECUTABLES_GPU=$(foreach executable,$(EXECUTABLES_POST),${TESTDIR}/${
 endif
 endif
 
+DEFAULT_TEST_EXECUTABLES=0
+
 ifndef TEST_EXECUTABLES
+DEFAULT_TEST_EXECUTABLES=1
+endif
+ifeq (${TEST_EXECUTABLES}, "")
+DEFAULT_TEST_EXECUTABLES=1
+endif
+ifeq (${DEFAULT_TEST_EXECUTABLES}, 1)
 
 TEST_TARGET_CPU = ${INSTALLED_EXECUTABLES_CPU}
 TEST_TARGET_GPU = ${INSTALLED_EXECUTABLES_GPU}
