--- a/hf_processor/MakefileCommon
+++ b/hf_processor/MakefileCommon
@@ -103,9 +103,9 @@ GPU_CALLGRAPH_FILE=CG_GPU.xml
 SRC_DIR_CPU=${DIR_CPU}${SRC_DIR_COMMON}/
 SRC_DIR_GPU=${DIR_GPU}${SRC_DIR_COMMON}/
 
-SRC_F90_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.f90')'
+SRC_F90_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.f90' -o -name '*.f')'
 SRC_F90=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_F90_PRE} --exceptions ${EXCEPTIONS})
-SRC_F90PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.F90')'
+SRC_F90PP_PRE='$(shell find ${SRC_DIR_COMMON} -type f -name '*.F90' -o -name '*.F')'
 SRC_F90PP=$(shell python ${TOOLSDIR}filterExceptions.py --paths ${SRC_F90PP_PRE} --exceptions ${EXCEPTIONS})
 
 SRC_LIB_FORT=$(shell find ${LIBDIR} -type f -name '*.f90')
@@ -216,6 +216,8 @@ endif
 
 SRC_FORT_COMMON_DIRS=$(dir $(SRC_FORT)) $(dir $(SRC_H90_ALL))
 
+vpath %.f $(SRC_FORT_COMMON_DIRS)
+vpath %.F $(SRC_FORT_COMMON_DIRS)
 vpath %.f90 $(SRC_FORT_COMMON_DIRS)
 vpath %.F90 $(SRC_FORT_COMMON_DIRS)
 vpath %.h90 $(SRC_FORT_COMMON_DIRS)
@@ -223,7 +225,7 @@ vpath %.H90 $(SRC_FORT_COMMON_DIRS)
 
 .PHONY: all clean clean_cpu clean_gpu install install_cpu install_gpu install_framework_executables_cpu install_framework_executables_gpu graphs build build_cpu build_gpu create_install_directories source source_cpu source_gpu tests tests_cpu tests_gpu framework_sources framework_sources_cpu framework_sources_gpu build_hybrid_cpu build_hybrid_gpu build_framework_cpu build_framework_gpu install_non_hybrid_framework_executables
 
-.SUFFIXES: .f90 .F90 .h90 .H90
+.SUFFIXES: .f90 .F90 .h90 .H90 .f .F
 
 all: build_cpu build_gpu
 
@@ -470,6 +472,22 @@ ${SRC_DIR_GPU}%.f90: %.f90
 	@mkdir -p ${SRC_DIR_GPU}; cp -fp $< $@
 
 ${SRC_DIR_GPU}%.F90: %.F90
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_GPU}; cp -fp $< $@
+
+${SRC_DIR_CPU}%.f: %.f
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_CPU}; cp -fp $< $@
+
+${SRC_DIR_CPU}%.F: %.F
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_CPU}; cp -fp $< $@
+
+${SRC_DIR_GPU}%.f: %.f
+	@echo ...copying file into $@ >${DEBUG_OUTPUT}
+	@mkdir -p ${SRC_DIR_GPU}; cp -fp $< $@
+
+${SRC_DIR_GPU}%.F: %.F
 	@echo ...copying file into $@ >${DEBUG_OUTPUT}
 	@mkdir -p ${SRC_DIR_GPU}; cp -fp $< $@
 
