--- a/hf_processor/MakefileForCompilationCommon
+++ b/hf_processor/MakefileForCompilationCommon
@@ -23,6 +23,7 @@
 #  Author           Michel Müller (RIKEN)                                   #
 #***************************************************************************#
 include ./MakesettingsGeneral
+HYBRID_LIBRARY_FILENAME_POSTFIX?=pp
 include ./Makesettings
 
 ifdef VERBOSE
@@ -49,7 +50,7 @@ OBJ_PRE4=$(OBJ_PRE3:.F=.o)
 OBJ_PRE5=$(patsubst ./%,%,${OBJ_PRE4})
 OBJ=$(filter-out $(EXECUTABLES_O),$(OBJ_PRE5))
 
-USER_LIB=libpp.a
+USER_LIB=lib${HYBRID_LIBRARY_FILENAME_POSTFIX}.a
 
 .SUFFIXES : .out .o .il .F90 .f90 .F .f
 
@@ -90,4 +91,6 @@ ${USER_LIB}: $(OBJ)
 helper_functions.o: storage_order.F90
 helper_functions_gpu.o: storage_order.F90
 time_profiling.o: helper_functions.o
+
+-include ${AUTO_DEPENDENCY_GENERATOR_OUTPUT_PATH}
 
